# my_scop

./: .clang-format  CMakeLists.txt
include/: application.h  stb_image.h
include/graphics/: debug.h  pipeline.h  queue_families.h  renderer.h  shaders.h  swap_chain.h  textures.h  utils.h  vulkan.h
include/maths/: mat.h  utils.h  vec.h
include/parser/: line_objects.h  parser.h  utils.h
lib/glfw-3.3.8/docs/html/: doxygen.css  jquery.js  tabs.css
shaders/: frag.glsl  vertex.glsl
src/: application.cpp  main.cpp
src/graphics/: debug.cpp  pipeline.cpp  queue_families.cpp  renderer.cpp  shaders.cpp  swap_chain.cpp  textures.cpp  utils.cpp  vulkan.cpp
src/maths/: mat.cpp  vec.cpp
src/parser/: exceptions.cpp  line_parser.cpp  parser.cpp  utils.cpp
